added gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-/testing/
-/.idea/
+*.egg-info/
+.DS_Store
+.ipynb_checkpoints/
+__pycache__/
+dist/
+build/
+
+# pystan cashed models
+cached*.pkl
+*.pkl
+
+# sphinx
+docs/_build
+docs/make.bat
+docs/Makefile
